# neuronveil

./: CHANGELOG.md  Cargo.toml  LICENSE  cliff.toml  identity.json  model.json
.github/workflows/: rust.yml
models/: identity.json  large_identity.json  multiple_layers.json  negative_identity.json
src/: bit.rs  bitxa.rs  client.rs  com.rs  layer.rs  lib.rs  message.rs  model.rs  multiplication_triplet_share.rs  reconstruct.rs  server.rs  shares.rs  signed_comparison.rs  split.rs  unexpected_message_error.rs  utils.rs
src/layer/: dense_layer.rs  relu.rs
src/layer/relu/: drelu.rs
src/utils/: softmax.rs
