[package]
name = "neuronveil"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
ring = { version = "0.17.8", features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

