[package]
name = "neuronveil"
version = "0.1.0"
edition = "2021"

[dependencies]
flexi_logger = "0.28.0"
log = "0.4.21"
ndarray = { version = "0.15.6", features = ["serde"] }
num-traits = "0.2.18"
ring = { version = "0.17.8", features = ["std"] }
s2n-quic = "1.36.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

